+++ version 3.0-rc1
* jabber: #3015 done: removed Facebook support (Vogel)
* autoresponder: #3016 fixed: crash on exit when autoresponder is used (Vogel)
* translations: complete Spanish (Mexican) translations (timbamik)
* freebsd: #3028 fixed: compilation issued (Paweł Pękala)
* desktop_docking: plugin removed (Vogel)

+++ version 3.0-beta1
* contacts: #2990 fixed: mising up contacts priorities sometimes (Vogel)
* history: #2981 implemented: display new messages in history window as these appears (Vogel)
* jabber: #2340 fixed: setting status message on disconnect works (Vogel)
* jabber: #2962 fixed: problems with refreshing roster (Vogel)
* gadu: #2972 implemented: allow sending Gadu gifts (Vogel)
* gui: #2989 fixed: sort buddies list after changing priorities (Vogel)
* gui: #3001 fixed: restoring windows position works propeperly now (Vogel)

+++ version 3.0-alpha2
* notify: #2963 fixed: do not mix up New chat and New message notifications (Vogel)
* notify: #1352 fixed: reduce spacing between notifier configuration widgets (Vogel)
* jabber: replaced libiris with QXmpp (Vogel)
* jabber: #2746 fixed: application was unresponsive when trying to register new jabber account on jabbim.net (Vogel)
* jabber: #2955 fixed: fast sign in on Facebook on Windows restored (Vogel)
* jabber: #2653 fixed: show nice message when another clients uses the same resource and server disconnects (Vogel)

+++ version 3.0-alpha1
* gadu: #2937 fixed: file transfers are now compatible with GG 12 and GG Drive (Vogel)
* gui: #1713 implemented: added option to always show identity in buddies list (Vogel)
* gui: #2309 implemented: added expand/collapse items to buddies list popup menu (Vogel)
* gadu: TLS enabled by default for new accounts (Vogel)
* sound: #383 implemented: option to configure per-buddy sound file (Vogel)
* gui: #2811 fixed: do not show "Move to group" menu option if moving from Everybody or Ungroupped (Vogel)
* encryption_ng: #2952 implemented: add depreceation message (Vogel)